--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("ImagesPortfolio/FF.png");
+    background-image: url("Documents/FF.png");
     background-repeat: no-repeat;
     background-position: top right;
 }
